--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ dependencies = [
     "aiohttp>=3.13.2",
     "boto3>=1.41.0",
     "botocore>=1.41.0",
+    "fastapi>=0.115.0",
+    "uvicorn>=0.32.0",
+    "python-dotenv>=1.0.0",
     "pybreaker>=1.4.0",
     "pydantic>=2.11.9",
     "typing-extensions>=4.15.0",
