--- a/utils/logging/Config/log_config_staging.json
+++ b/utils/logging/Config/log_config_staging.json
@@ -59,5 +59,22 @@
     "slow_threshold_seconds": 0.8,
     "warn_threshold_seconds": 5.0,
     "error_threshold_seconds": 30.0
+  },
+  "workflow_logging": {
+    "enabled": true,
+    "log_user_messages": true,
+    "log_agent_responses": true,
+    "log_usage_metrics": true,
+    "log_condition_evaluations": true,
+    "log_pass_through_extractions": true,
+    "truncate_messages_at": 300,
+    "include_trace_id": true,
+    "async_logging": true,
+    "messages": {
+      "tokens": "Consumed Input tokens {input_tokens}, Output tokens {output_tokens}, Total {total_tokens}",
+      "duration": "{component} '{name}' completed in {duration_ms:.2f}ms",
+      "cost": "Cost: ${cost_usd:.6f}",
+      "error": "{component} '{name}' failed: {error}"
+    }
   }
 } 
