--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 requires-python = ">=3.11"
 dependencies = [
     "aiohttp>=3.13.2",
+    "aiofiles>=24.1.0",
     "boto3>=1.41.0",
     "botocore>=1.41.0",
     "fastapi>=0.115.0",
